--- a/bspwm_setUp/.config/polybar/config.ini
+++ b/bspwm_setUp/.config/polybar/config.ini
@@ -84,7 +84,7 @@ label-focused-background = ${colors.background-alt}
 label-focused-padding = 2
 
 ;label-occupied = %icon%
-label-occupied-padding = 2
+;label-occupied-padding = 2;
 
 ;label-urgent = %icon%
 label-urgent-background = ${colors.alert}
