--- a/bspwm_setUp/.config/polybar/config.ini
+++ b/bspwm_setUp/.config/polybar/config.ini
@@ -1,19 +1,30 @@
-;==========================================================
-;
-;
-;   ██████╗  ██████╗ ██╗  ██╗   ██╗██████╗  █████╗ ██████╗
-;   ██╔══██╗██╔═══██╗██║  ╚██╗ ██╔╝██╔══██╗██╔══██╗██╔══██╗
-;   ██████╔╝██║   ██║██║   ╚████╔╝ ██████╔╝███████║██████╔╝
-;   ██╔═══╝ ██║   ██║██║    ╚██╔╝  ██╔══██╗██╔══██║██╔══██╗
-;   ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
-;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
-;
-;                -PAD-
-;
-;==========================================================
+; ____       _       _                
+;|  _ \ ___ | |_   _| |__   __ _ _ __    
+;| |_) / _ \| | | | | '_ \ / _` | '__|  --PAD
+;|  __/ (_) | | |_| | |_) | (_| | |     
+;|_|   \___/|_|\__, |_.__/ \__,_|_|     
+;               |___/
 
 
-[colors]
+;[global/wm]
+
+;margin-bottom = 0
+;margin-top = 0
+
+;include-file = ../../scripts/system.ini
+;;include-file = modules.ini
+
+
+######################################################
+
+[global/wm]
+margin-top = 0
+margin-bottom = 0
+
+
+######################################################
+
+[color]
 background = #00
 background-alt = #3306080a
 background-trans = #00212121
@@ -24,162 +35,388 @@ primary = #fff
 secondary = #e60053
 
 alert = #f7768e
-#disabled = #707880
+##########
 
-[bar/padbar1]
-#monitor =
-width = 100%
-height = 17pt
+bg = #1A1B26
+fg = #F1F1F1
+mb = #222330
+
+red = #f7768e
+pink = #FF0677
+purple = #583794
+blue = #7aa2f7
+blue-arch = #0A9CF5
+cyan = #7dcfff
+teal = #00B19F
+green = #9ece6a
+lime = #B9C244
+yellow = #e0af68
+amber = #FBC02D
+orange = #E57C46
+brown = #AC8476
+grey = #8C8C8C
+indigo = #6C77BB
+blue-gray = #6D8895
+
+
+######################################################
+
+[bar/padbar]
+
+;monitor = ${env:MONITOR:}
+;monitor-strict = false
+;override-redirect = false
+
+
+bottom = false
 fixed-center = true
 
-#radius = 6
-#; dpi = 96
+width = 100%
+height = 20
 
-background = ${colors.background-trans}
-foreground = #f7f7f7 
+;offset-x = 5%
+;offset-y = 10
 
-line-size = 3pt
-line-color = #f00
+;width = 90%
+;height = 26
+
 
 border-size = 2pt
 border-color = #00000000
 
-padding-left = 1
-padding-right = 1
+padding-right = 2
+padding-left = 2
 
-module-margin-left = 1
-module-margin-right = 1
 
-separator = |
-#separator-foreground = ${colors.disabled}
+background = ${color.background}
+foreground = #f7f7f7 
 
-font-0 = "Hack Nerd Font:size=10;2"
-font-1 = "FiraCode Font:size=10;2"
+module-margin-left = 2
+module-margin-right = 0
 
-modules-left = bspwm xwindowxxx
-modules-center =
-modules-right =  xxpulseaudio network battery date
 
-;tray-position = none
-;tray-padding = 2
+; Text
+font-0 = "FiraMono Nerd Font:size=10;2"
+; Icons
+;font-1 = "Hack Nerd Font:size=10;2"
+font-1 = "Font Awesome 6 Free Solid:size=10;2"
+font-2 = "Material Design Icons Desktop:size=10;2"
+font-3 = "Material Design Icons Desktop:size=10;2"
+; Glyphs
+font-4 = "MesloLGS NF:style=Regular:pixelsize=10;2"
 
-cursor-click = pointer
-cursor-scroll = ns-resize
 
+modules-left = bspwm 
+modules-center = date
+modules-right = network battery pulseaudio dots power
+
+
+;separator = 
+#dim-value = 1.0
+
+
+;;locale = es_MX.UTF-8
+
+wm-restack = bspwm
 enable-ipc = true
 
-; wm-restack = generic
- wm-restack = bspwm
-; wm-restack = i3
+;cursor-click = pointer
+;cursor-scroll = 
 
-; override-redirect = true
+######################################################
+
+[settings]
+
+screenchange-reload = true
+
+;compositing-background = source
+;compositing-foreground = over
+;compositing-overline = over
+;compositing-underline = over
+;compositing-border = over
+
+pseudo-transparency = false
+
+; vim:ft=dosini
+
+
+######################################################
+
+
+; __  __           _       _           
+;|  \/  | ___   __| |_   _| | ___  ___   
+;| |\/| |/ _ \ / _` | | | | |/ _ \/ __|		
+;| |  | | (_) | (_| | |_| | |  __/\__ \		---PAD
+;|_|  |_|\___/ \__,_|\__,_|_|\___||___/		
 
 
 [module/bspwm]
 type = internal/bspwm
+
+enable-click = true
+enable-scroll = true
+reverse-scroll = true
 pin-workspaces = true
+occupied-scroll = false
 
-;label-focused = 
-label-focused-background = ${colors.background-alt}
-label-focused-padding = 2
-
-;label-occupied = %icon%
-label-occupied-padding = 2
-
-;label-urgent = %icon%
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 2
+ws-icon-0 = 1;󰬺
+ws-icon-1 = 2;󰬻
+ws-icon-2 = 3;󰬼
+ws-icon-3 = 4;󰬽
+ws-icon-4 = 5;󰬾
+ws-icon-default = "♟ "
 
 
+format = <label-state>
+
+label-focused = %icon%
+label-focused-background = ${color.background-trans}
+label-focused-padding = 1
+label-focused-foreground = ${color.blue}
+
+label-occupied = %icon%
+label-occupied-padding = 1
+label-occupied-background = ${color.background-trans}
+label-occupied-foreground= ${color.green}
+
+label-urgent = %icon%
+label-urgent-padding = 1
+
+label-empty = %icon%
+label-empty-foreground = ${color.fg}
+label-empty-padding = 1
+label-empty-background = ${color.background-trans}
+
+######################################################
+
+
+[module/updates]
+type = custom/script
+exec = Updates --get-updates
+interval = 120
+
+format-prefix = " "
+format-prefix-font = 2
+format-prefix-background = ${color.mb}
+format-prefix-foreground = ${color.lime}
+
+label = %output%
+label-background = ${color.mb}
+
+click-left = OpenApps --update
+click-right = OpenApps --checkupdates
+
+
+######################################################
+
+[module/launcher]
+type = custom/text
+
+label = 󰣇
+label-foreground = ${color.grey}
+label-font = 4
+
+click-left = OpenApps --menu
+click-right = RiceSelector
+
+######################################################
+
+[module/dots]
+type = custom/text
+label = "󰇙"
+label-font = 3
+label-foreground = ${color.blue-gray}
+
+######################################################
+
+[module/power]
+type = custom/text
+label = " "
+label-foreground = ${color.red}
+
+click-left = OpenApps --powermenu
+
+#####################################################
 [module/xworkspaces]
 type = internal/xworkspaces
 
 label-active = %name%
-label-active-background = ${colors.background-alt}
-label-active-underline= ${colors.primary}
-label-active-padding = 1
+label-active-background = ${color.background-alt}
+label-active-underline= ${color.primary}
+label-active-padding = 3
 
 label-occupied = %name%
-label-occupied-padding = 2
-label-coccupied-foreground = ${colors.blue}
+label-occupied-padding = 3
+label-coccupied-foreground = ${color.blue}
 
 label-urgent = %name%
-label-urgent-background = ${colors.alert}
-label-urgent-padding = 2
+label-urgent-background = ${color.alert}
+label-urgent-padding = 3
 
 label-empty = %name%
-label-empty-foreground = ${colors.disabled}
-label-empty-padding = 2
+label-empty-foreground = ${color.disabled}
+label-empty-padding = 3
+
+
+######################################################
 
 [module/xwindow]
 type = internal/xwindow
 label = %title:0:30:...%
 
+
+######################################################
+
+[module/network]
+type = internal/network
+;interface = wlan1
+interval = 3.0
+accumulate-stats = true
+unknown-as-up = true
+
+format-connected = <label-connected>
+format-connected-prefix = " "
+format-connected-prefix-font = 2
+format-connected-background = ${color.mb}
+format-connected-foreground = ${color.green}
+
+speed-unit = ""
+label-connected = "%{A1:OpenApps --netmanager:}%netspeed%%{A}"
+label-connected-background = ${color.mb}
+label-connected-foreground = ${color.amber}
+
+format-disconnected = <label-disconnected>
+format-disconnected-prefix = " "
+format-disconnected-prefix-font = 2
+format-disconnected-prefix-background = ${color.mb}
+format-disconnected-foreground = ${color.red}
+
+label-disconnected = "%{A1:OpenApps --netmanager:}Offline%{A}"
+label-disconnected-background = ${color.mb}
+label-disconnected-foreground = ${color.red}
+
+######################################################
+
 [module/pulseaudio]
 type = internal/pulseaudio
 
-sink = alsa_output.pci-0000_00_1f.3.analog-stereo
-
+;;sink = alsa_output.pci-0000_00_1b.0.analog-stereo
 use-ui-max = true
+interval = 5
 
-interval = 3
+format-volume = <label-volume>
+format-volume-prefix = ""
+format-volume-prefix-font = 2
+format-volume-background = ${color.background-trans}
+format-volume-foreground = ${color.indigo}
 
-format-volume = <ramp-volume> <label-volume>
+label-volume = " %percentage%"
+label-volume-background = ${color.background-trans}
+label-volume-foreground = ${color.fg}
 
-format-volume-foreground = ${colors.primary}
-format-volume-prefix-foreground = ${colors.primary}
+format-muted = <label-muted>
+format-muted-prefix = 
+format-muted-prefix-font = 2
+format-muted-foreground = ${color.indigo}
+format-muted-background = ${color.background-trans}
+label-muted = " Muted "
+label-muted-foreground = ${color.red}
+label-muted-background = ${color.background-trans}
 
-ramp-volume-0 = 🔈
-ramp-volume-1 = 🔉
-ramp-volume-2 = 🔊
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 = 
+ramp-volume-3 = 
+ramp-volume-4 = 
 
-label-volume = %percentage%%
-
-label-muted = 🔇 muted
-format-muted-foreground = ${colors.foreground-alt}
-
-label-muted-foreground = #666
+click-right = OpenApps --soundcontrol
 
 
-[module/wlan]
-type = internal/network
-interface-type = wireless
-
-label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
-
+######################################################
 
 [module/date]
 type = internal/date
 interval = 2
 
 date = "%a %b %d"
-date-alt = %A, %d %B %Y
 
-time = %H:%M
-time-alt = %H:%M:%S
+date-alt = %I:%M %P
+;format-foreground = ${color.lime}
 
-format-prefix = " "
-label = %time%  %date%
+format = <label>
+
+label = %time% %date%
+
+;time-alt = %H:%M:%S
+
+
+######################################################
+
+[module/brightness]
+type = internal/backlight
+card = ${system.sys_graphics_card}
+
+enable-scroll = false
+
+format = <ramp><label>
+label = %percentage%%
+label-padding-left = 3pt
+
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
+ramp-font = 2
+ramp-foreground = ${color.yellow}
+
+######################################################
 
 [module/battery]
 type = internal/battery
+full-at = 98
 battery = BAT0
 adapter = APD1
-full-at = 98
+;battery = ${system.sys_battery}
+;adapter = ${system.sys_adapter}
+;poll-interval = 2
+;time-format = %H:%M
 
-format-charging =  󰂄 <label-charging>
-format-discharging = <ramp-capacity> <label-discharging>
-format-full =    <label-full>
+
+format-charging = <animation-charging><label-charging>
+format-charging-background = ${color.background-trans}
+label-charging = "%percentage%"
+label-charging-padding-left = 5pt
+label-charging-padding-right = 2pt
+
+format-discharging = <ramp-capacity><label-discharging>
+format-discharging-background = ${color.background-trans}
+label-discharging = %percentage%
+label-discharging-padding-left = 5pt
+label-discharging-padding-right = 2pt
+
+format-full = <label-full>
+format-full-background = ${color.background-trans}
+format-full-prefix = 
+format-full-prefix-font = 2
+format-full-prefix-foreground = ${color.amber}
+label-full = "%percentage%"
+label-full-padding-left = 5pt
+label-full-padding-right = 2pt
 
 ramp-capacity-0 = 
 ramp-capacity-1 = 
 ramp-capacity-2 = 
 ramp-capacity-3 = 
 ramp-capacity-4 = 
+ramp-capacity-foreground = ${color.foreground-alt}
+ramp-capacity-font = 2
+
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
+animation-charging-foreground = ${color.foreground-alt}
+animation-charging-font = 2
+animation-charging-framerate = 700
 
 
-[settings]
-screenchange-reload = true
-pseudo-transparency = true
-
-; vim:ft=dosini
