--- a/Alacrityy./.config/alacritty/alacritty.toml
+++ b/Alacrityy./.config/alacritty/alacritty.toml
@@ -6,28 +6,30 @@ duration = 0
 [colors]
 draw_bold_text_with_bright_colors = false
 
-[colors.normal]
-black = "0x1d1f21"
-blue = "0x81a2be"
-cyan = "0x8abeb7"
-green = "0xb5bd68"
-magenta = "0xb294bb"
-red = "0xcc6666"
-white = "0xc5c8c6"
-yellow = "0xf0c674"
-
-# Bright colors
 [colors.bright]
-black = "0x969896"
-blue = "0xb4b7b4"
-cyan = "0xa3685a"
-green = "0x282a2e"
-magenta = "0xe0e0e0"
-red = "0xde935f"
-white = "0xffffff"
-yellow = "0x373b41"
+black = "#45475a"
+blue = "#778da9"
+cyan = "#9cc5a1"
+green = "#a3d6a9"
+magenta = "#364156"
+red = "#d66853"
+white = "#fdfdff"
+yellow = "#e0af68"
+
+[colors.normal]
+black = "#45475a"
+blue = "#778da9"
+cyan = "#9cc5a1"
+green = "#a3d6a9"
+magenta = "#364156"
+red = "#d66853"
+white = "#fdfdff"
+yellow = "#e0af68"
 
 
+[selection]
+save_to_clipboard = true
+#mouse_bindings = { mouse: Right, action: Paste }
 
 
 [colors.cursor]
@@ -41,12 +43,14 @@ unfocused_hollow = false
 
 
 [colors.primary]
-background = "0x2A2A2A"
-foreground = "0xc5c8c6"
+background = "#121212"
+foreground = "#f4f4f9"
 
 
 [font]
 size = 12
+
+
 
 [font.glyph_offset]
 x = 0
@@ -62,7 +66,7 @@ multiplier = 5
 
 [window]
 decorations = "none"
-opacity = 0.7
+opacity = 0.75
 startup_mode = "Windowed"
 dynamic_padding = false
 
@@ -75,12 +79,4 @@ lines = 0
 x = 5
 y = 5
 
-[[keyboard.bindings]]
-chars = "\u0002&"
-key = "W"
-mods = "Command"
 
-[[keyboard.bindings]]
-chars = "\u0002c"
-key = "T"
-mods = "Command"
