--- a/Alacrityy./.config/alacritty/alacritty.toml
+++ b/Alacrityy./.config/alacritty/alacritty.toml
@@ -1,79 +1,72 @@
-[bell]
-animation = "EaseOutExpo"
-color = "0xffffff"
-duration = 0
-
-[colors]
-draw_bold_text_with_bright_colors = false
-
+# color scheme
 [colors.bright]
-black = "#45475a"
-blue = "#778da9"
-cyan = "#9cc5a1"
-green = "#a3d6a9"
-magenta = "#364156"
-red = "#d66853"
-white = "#fdfdff"
-yellow = "#e0af68"
+black = "#928374"
+blue = "#83a598"
+cyan = "#8ec07c"
+green = "#b8bb26"
+magenta = "#d3869b"
+red = "#fb4934"
+white = "#ebdbb2"
+yellow = "#fabd2f"
+
+[colors.hints.end]
+background = "#ebdbb2"
+foreground = "#EE8739"
+
+[colors.hints.start]
+background = "#ebdbb2"
+foreground = "#EE8739"
 
 [colors.normal]
-black = "#45475a"
-blue = "#778da9"
-cyan = "#9cc5a1"
-green = "#a3d6a9"
-magenta = "#364156"
-red = "#d66853"
-white = "#fdfdff"
-yellow = "#e0af68"
+black = "#282828"
+blue = "#458588"
+cyan = "#689d6a"
+green = "#98971a"
+magenta = "#b16286"
+red = "#cc241d"
+white = "#a89984"
+yellow = "#d79921"
 
+[colors.primary]
+background = "#282828"
+foreground = "#ebdbb2"
+
+[colors.selection]
+background = "#655c55"
+text = "#282828"
 
 [selection]
 save_to_clipboard = true
 #mouse_bindings = { mouse: Right, action: Paste }
 
-
+# cursor appearance
 [colors.cursor]
-cursor = "0xc5c8c6"
-text = "0x1d1f21"
+background = "#ebdbb2"
+text = "#282828"
 
 [cursor]
 style = "Beam"
 unfocused_hollow = false
 
-
-
-[colors.primary]
-background = "#121212"
-foreground = "#f4f4f9"
-
-
+# fonts
 [font]
 size = 12
-
-
 
 [font.glyph_offset]
 x = 0
 y = 0
 
-
-[mouse]
-hide_when_typing = false
-
+# scrolling
 [scrolling]
-history = 2000
+history = 10000
 multiplier = 5
 
+# window 
 [window]
-decorations = "none"
-opacity = 0.75
+#decorations = "none"
 startup_mode = "Windowed"
 dynamic_padding = false
-
-[window.dimensions]
-columns = 0
-lines = 0
-
+opacity = 0.9
 
 [window.padding]
 x = 5
