Clean config for tmux..

--- a/Tmuxx_/.tmux.conf
+++ b/Tmuxx_/.tmux.conf
@@ -1,37 +1,69 @@
 
-# set windows & panes
+### Base Settings ###
+set -g default-terminal "tmux-256color"
 set -g base-index 1
 setw -g pane-base-index 1
+set -s escape-time 0
+set -g history-limit 1000000
+set -g renumber-windows on
+set -g mouse on
 
-set -g mouse on # enable mouse
-set -g default-terminal "tmux-256color" 
-# terminal colors
-
-# change default keybind
+### Key Bindings ###
+# Change default prefix key to C-a
 set -g prefix C-a
 unbind C-b
 bind-key C-a send-prefix
 
-# reload config 
+# Reload config 
 unbind r
-bind r source-file ~/.tmux.conf \; display "Fresh Tmux Config!"
+bind r source-file ~/.tmux.conf \; display "Configuration reloaded!"
 
-###===========###
-set-window-option -g mode-keys vi # vim motion
-
+# Enable vim-like key bindings in copy mode
+set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection
 
+# Pane navigation with vim-like keys
 bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
 
-# split pane 
+# Pane resizing with arrow keys
+bind -r < resize-pane -L 5
+bind -r > resize-pane -R 5
+bind -r + resize-pane -U 5
+bind -r - resize-pane -D 5
+
+# Pane splitting with customized keys
 unbind %
-bind v split-window -h # |
+bind v split-window -h  # vertical split
 unbind '"'
-bind s split-window -v # -
+bind s split-window -v  # horizontal split
 
 
-set -g window-style 'bg=default'
+### Status Bar Settings ###
+# Position, style, and format of the status bar
+set-option -g status-position bottom
+set-option -g status-style bg=black,fg=grey
+set-option -g status-justify centre
+
+# Left side of the status bar
+set-option -g status-left '[#S] '
+set-option -g status-left-length 20
+
+# Right side of the status bar
+set-option -g status-right '%I:%M %p'
+set-option -g status-right-length 20
+
+# Window status
+set-option -g window-status-format ' #I #W '
+set-option -g window-status-current-format ' #[bg=green,fg=black]#I #W#[default] '
+
+# Additional settings for a cleaner look
+set-option -g status-bg black
+set-option -g status-fg white
+set-window-option -g window-status-style bg=black,fg=white
+set-window-option -g window-status-current-style bg=green,fg=black
+
+
