--- a/Alacritty/.config/alacritty/alacritty.toml
+++ b/Alacritty/.config/alacritty/alacritty.toml
@@ -66,7 +66,7 @@ multiplier = 5
 #decorations = "none"
 startup_mode = "Windowed"
 dynamic_padding = false
-opacity = 0.9
+#opacity = 0.9
 
 [window.padding]
 x = 5
