--- a/Tmuxx_/.tmux.conf
+++ b/Tmuxx_/.tmux.conf
@@ -1,5 +1,5 @@
 
-### Base Settings ###
+### Basic Settings ###
 set -g default-terminal "tmux-256color"
 set -g base-index 1
 setw -g pane-base-index 1
@@ -10,9 +10,9 @@ set -g mouse on
 
 ### Key Bindings ###
 # Change default prefix key to C-a
-set -g prefix C-a
+set -g prefix `
 unbind C-b
-bind-key C-a send-prefix
+bind-key ` send-prefix
 
 # Reload config 
 unbind r
