--- a/Tmuxx_/.tmux.conf
+++ b/Tmuxx_/.tmux.conf
@@ -1,15 +1,16 @@
 
 ### Basic Settings ###
 set -g default-terminal "tmux-256color"
-set -g base-index 1
+set -g base-index 1 #change index to 1
 setw -g pane-base-index 1
 set -s escape-time 0
 set -g history-limit 1000000
-set -g renumber-windows on
+set -g renumber-windows on #reorder window 
 set -g mouse on
 
+
 ### Key Bindings ###
-# Change default prefix key to C-a
+# Change default prefix key to `
 set -g prefix `
 unbind C-b
 bind-key ` send-prefix
@@ -43,14 +44,18 @@ bind s split-window -v  # horizontal split
 
 
 ### Status Bar Settings ###
+
+set-option -g allow-rename off
+
 # Position, style, and format of the status bar
 set-option -g status-position bottom
 set-option -g status-style bg=black,fg=grey
 set-option -g status-justify centre
 
 # Left side of the status bar
-set-option -g status-left '[#S] '
+set-option -g status-left ''
 set-option -g status-left-length 20
+set-option -g status-left '#[fg=green]#S#[default] [#I]'
 
 # Right side of the status bar
 set-option -g status-right '%I:%M %p'
