Making some changes to tmux

--- a/Tmuxx_/.tmux.conf
+++ b/Tmuxx_/.tmux.conf
@@ -1,5 +1,8 @@
 
-### Basic Settings ###
+## Basic Settings ###
+
+#set -a terminal-features 'tmux-256color:RGB'
+set -g focus-events on
 set -g default-terminal "tmux-256color"
 set -g base-index 1 #change index to 1
 setw -g pane-base-index 1
