--- a/Tmuxx_/.tmux.conf
+++ b/Tmuxx_/.tmux.conf
@@ -1,22 +1,41 @@
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+
+set -g @plugin 'aserowy/tmux.nvim'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
 
 ## Basic Settings ###
-
-#set -a terminal-features 'tmux-256color:RGB'
+set -a terminal-features 'tmux-256color:RGB'
 set -g focus-events on
-set -g default-terminal "tmux-256color"
+
+set -g default-terminal "${TERM}"
+set-option -ga terminal-overrides ",xterm*:Tc"
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
+
+set-option -g allow-rename off
 set -g base-index 1 #change index to 1
-setw -g pane-base-index 1
+set -g pane-base-index 1
+set -g renumber-windows on #reorder window 
+set-window-option -g pane-base-index 1
+
 set -s escape-time 0
 set -g history-limit 1000000
-set -g renumber-windows on #reorder window 
 set -g mouse on
-
 
 ### Key Bindings ###
 # Change default prefix key to `
 set -g prefix `
 unbind C-b
 bind-key ` send-prefix
+
+# Toggle tmux status bar using '\'
+bind '\' set status
+if-shell "[[ $(tmux lsw | wc -l) -le 1 ]]" 'set -g status'
+
+set -g status on
 
 # Reload config 
 unbind r
@@ -27,51 +46,75 @@ set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection
 
-# Pane navigation with vim-like keys
-bind -r k select-pane -U
-bind -r j select-pane -D
-bind -r h select-pane -L
-bind -r l select-pane -R
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?|fzf)(diff)?$'"
+bind-key -n 'C-h' if-shell "$is_vim" 'send-keys C-h'  'select-pane -L'
+bind-key -n 'C-j' if-shell "$is_vim" 'send-keys C-j'  'select-pane -D'
+bind-key -n 'C-k' if-shell "$is_vim" 'send-keys C-k'  'select-pane -U'
+bind-key -n 'C-l' if-shell "$is_vim" 'send-keys C-l'  'select-pane -R'
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
 
-# Pane resizing with arrow keys
-bind -r < resize-pane -L 5
-bind -r > resize-pane -R 5
-bind -r + resize-pane -U 5
-bind -r - resize-pane -D 5
+bind-key -T copy-mode-vi 'C-h' select-pane -L
+bind-key -T copy-mode-vi 'C-j' select-pane -D
+bind-key -T copy-mode-vi 'C-k' select-pane -U
+bind-key -T copy-mode-vi 'C-l' select-pane -R
+bind-key -T copy-mode-vi 'C-\' select-pane -l
+# >>> need to install vim-tmux-navigator plugins inside Neovim as well
 
-# Pane splitting with customized keys
+# Pane resizing Alt + movement
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+
+bind -n 'M-h' if-shell "$is_vim" 'send-keys M-h' 'resize-pane -L 5'
+bind -n 'M-l' if-shell "$is_vim" 'send-keys M-l' 'resize-pane -R 5'
+bind -n 'M-k' if-shell "$is_vim" 'send-keys M-k' 'resize-pane -U 1'
+bind -n 'M-j' if-shell "$is_vim" 'send-keys M-j' 'resize-pane -D 1'
+
+bind-key -T copy-mode-vi M-h resize-pane -L 5
+bind-key -T copy-mode-vi M-l resize-pane -R 5
+bind-key -T copy-mode-vi M-k resize-pane -U 1
+bind-key -T copy-mode-vi M-j resize-pane -D 1
+
+# Open new pane in current path
 unbind %
-bind v split-window -h  # vertical split
+bind s split-window -v -c "#{pane_current_path}"
 unbind '"'
-bind s split-window -v  # horizontal split
-
+bind v split-window -h -c "#{pane_current_path}"
 
 ### Status Bar Settings ###
 
-set-option -g allow-rename off
-
-# Position, style, and format of the status bar
-set-option -g status-position bottom
-set-option -g status-style bg=black,fg=grey
-set-option -g status-justify centre
-
-# Left side of the status bar
-set-option -g status-left ''
-set-option -g status-left-length 20
-set-option -g status-left '#[fg=green]#S#[default] [#I]'
-
-# Right side of the status bar
-set-option -g status-right '%I:%M %p'
-set-option -g status-right-length 20
-
-# Window status
-set-option -g window-status-format ' #I #W '
-set-option -g window-status-current-format ' #[bg=green,fg=black]#I #W#[default] '
-
-# Additional settings for a cleaner look
-set-option -g status-bg black
-set-option -g status-fg white
-set-window-option -g window-status-style bg=black,fg=white
-set-window-option -g window-status-current-style bg=green,fg=black
 
 
+set -g status-position top               # statusbar position
+set -g status-interval 1
+
+# TokyoNight colors for window status, status right, and window format
+
+set -g window-status-separator ""                         # Set a separator for windows
+# 𒐬  
+set -g status-left '#{?client_prefix,#[reverse] ⌙ᴾᴬᴰ,} [╳] '
+set -g status-style "bg=default fg=colour252"
+
+set-option -g window-status-format ' 𐰁ᶻ#I⌙#[fg=colour245,bg=default]#W#[default] '
+set-option -g window-status-current-format ' ⌥ #[fg=colour255,bg=default,bold]#I⌙#W#[default] '
+
+# Apply Grubox colors to window status and current window
+set -g window-status-style "fg=colour245 bg=colour233"      # Dim window status with a dark background
+set -g window-status-activity-style "fg=default bg=colour235" # Highlight activity in windows (yellow)
+
+# Status right section with Grubox colors (date/time)
+set -g status-right-length 120
+set -g status-right '#(date +"%b%_d | %H:%M")'               # Date/time format
+set -g status-right-style "fg=colour215 bg=default"        # Status-right text color (light yellow) on dark background
+
+# Current window status (bold and highlighted)
+set -g window-status-current-attr bold
+set -g window-status-current-style "fg=colour255 bg=colour237" # Bold current window with white text on dark background
+
+# press (Leader + I) to fetch the plugins.
+run '~/.tmux/plugins/tpm/tpm'
