--- a/Tmuxx_/.tmux.conf
+++ b/Tmuxx_/.tmux.conf
@@ -100,7 +100,7 @@ set -g window-status-separator ""                         # Set a separator for 
 set -g status-left '#{?client_prefix,#[reverse] ⌙ᴾᴬᴰ,} [╳] '
 set -g status-style "bg=default fg=colour252"
 
-set-option -g window-status-format ' 𐰁ᶻ#I⌙#[fg=colour245,bg=default]#W#[default] '
+set-option -g window-status-format ' ᶻzᶻ#I⌙#[fg=colour245,bg=default]#W#[default] '
 set-option -g window-status-current-format ' ⌥ #[fg=colour255,bg=default,bold]#I⌙#W#[default] '
 
 # Apply Grubox colors to window status and current window
